k8s/flux/base/infrastructure/traefik-kind/ingress.yaml
---
# This is the main nginx ingress to redirect everything to the traefik service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - localhost
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
      # host: 'localhost'
---
# This is the traefik ingress route to access the traefik dashboard via http://localhost/dashboard
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`)
      services:
        - kind: Service
          name: traefik
          port: 9000
    - kind: Rule
      match: HeaderRegexp(`Referer`, `https?://localhost/dashboard/.*`) && (PathPrefix(`/api`) || PathPrefix(`/assets`) || PathPrefix(`/providers`))
      services:
        - kind: Service
          name: traefik
          port: 9000
